--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,14 +8,14 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-    --font-sans:
-        'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-
+    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     --font-dancing: 'Dancing Script', cursive;
     --font-nunito: 'Nunito', sans-serif;
+    --font-poppins: 'Poppins', sans-serif;
 
     --color-green: var(--navbar);
     --color-dark-green: var(--dark-idk);
+    --color-button: var(--button);
 
     --radius-lg: var(--radius);
     --radius-md: calc(var(--radius) - 2px);
@@ -85,6 +85,7 @@
 
 :root {
     --navbar: #8BD766;
+    --button: #3C7123;
     /*--dark-idk: #3F7D20;*/
     --dark-idk: #2F5233;
     --background: oklch(1 0 0);
